corrected z-index of Loader

--- a/src/components/Loader/Loader.module.css
+++ b/src/components/Loader/Loader.module.css
@@ -1,4 +1,5 @@
 .loader {
+  z-index: 600;
   position: fixed;
   top: 50%;
   left: 50%;
